[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["GlennViroux <glenn.viroux@gmail.com>"]
readme = "README.md"
packages = [{include = "design_patterns"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
